; ModuleID = '/home/carl/AnghaBench/reactos/sdk/lib/crt/startup/extr_gccmain.c___do_global_dtors.c'
source_filename = "/home/carl/AnghaBench/reactos/sdk/lib/crt/startup/extr_gccmain.c___do_global_dtors.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@__do_global_dtors.p = internal global i32 (...)** bitcast (i8* getelementptr (i8, i8* bitcast (i32 (...)* @__DTOR_LIST__ to i8*), i64 1) to i32 (...)**), align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @__do_global_dtors() #0 {
  br label %1

1:                                                ; preds = %5, %0
  %2 = load i32 (...)**, i32 (...)*** @__do_global_dtors.p, align 8
  %3 = load i32 (...)*, i32 (...)** %2, align 8
  %4 = icmp ne i32 (...)* %3, null
  br i1 %4, label %5, label %11

5:                                                ; preds = %1
  %6 = load i32 (...)**, i32 (...)*** @__do_global_dtors.p, align 8
  %7 = load i32 (...)*, i32 (...)** %6, align 8
  %8 = call i32 (...) %7()
  %9 = load i32 (...)**, i32 (...)*** @__do_global_dtors.p, align 8
  %10 = getelementptr inbounds i32 (...)*, i32 (...)** %9, i32 1
  store i32 (...)** %10, i32 (...)*** @__do_global_dtors.p, align 8
  br label %1

11:                                               ; preds = %1
  ret void
}

declare dso_local i32 @__DTOR_LIST__(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
